<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.gistone</groupId>
  <artifactId>ampc</artifactId>
  <packaging>war</packaging>
  <version>0.0.1-SNAPSHOT</version>
  <name>ampc</name>
  <description/>
  
  <properties>
	<main.basedir>${basedir}/../..</main.basedir>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <!-- 这里一定要配置上java的版本，如果是1.7版本的可不用配置 -->
    <java.version>1.8</java.version>
    <!-- <java.home>C:\Program Files\Java\jdk1.8.0_31</java.home> -->
    <!-- 配置你的tomcat版本 -->
    <tomcat.version>7.0.55</tomcat.version>
  </properties>
  
  <!-- 父依赖 -->
  <parent>
	<groupId>org.springframework.boot</groupId>
	<artifactId>spring-boot-starter-parent</artifactId>
	<version>1.3.1.RELEASE</version>
  </parent>
  
  <dependencies><!-- 导入jar包 -->
  
    <dependency>
	    <groupId>org.springframework.boot</groupId>
	    <artifactId>spring-boot-devtools</artifactId>
	    <version>1.4.0.RELEASE</version>
	</dependency>
	
	<dependency>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-tomcat</artifactId>
        <scope>provided</scope>
	</dependency>
        
  	<dependency>
	  <groupId>org.springframework.boot</groupId>
	  <artifactId>spring-boot-starter-web</artifactId>
	  <version>1.3.5.RELEASE</version>
	</dependency>
	
	<dependency>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-test</artifactId>
		<scope>test</scope>
	</dependency>
	
	<dependency>
		<groupId>org.apache.tomcat.embed</groupId>
		<artifactId>tomcat-embed-jasper</artifactId>
		<scope>provided</scope>
	</dependency>
	

	<dependency>
		<groupId>javax.servlet</groupId>
		<artifactId>jstl</artifactId>
	</dependency>
	
	<!-- MYSQL -->
<!-- 	<dependency>
	    <groupId>mysql</groupId>
	    <artifactId>mysql-connector-java</artifactId>
	    <version>5.1.38</version>
	</dependency> -->
	
	
	
	<!-- oracle -->
	<dependency>
	    <groupId>com.oracle</groupId>
	    <artifactId>ojdbc6</artifactId>
	    <version>11.2.0.1.0</version>
	</dependency>
	
	<!-- Spring Boot JDBC -->
	<dependency>
	    <groupId>org.springframework.boot</groupId>
	    <artifactId>spring-boot-starter-jdbc</artifactId>
	</dependency>
	
	<dependency>
	    <groupId>org.mybatis.spring.boot</groupId>
	    <artifactId>mybatis-spring-boot-starter</artifactId>
	    <version>1.1.1</version>
	</dependency>
	
	<dependency>
        <groupId>com.alibaba</groupId>
        <artifactId>druid</artifactId>
        <version>1.0.18</version>
    </dependency>
    
    <!-- json解析 -->
	<dependency>
	    <groupId>net.sf.json-lib</groupId>
	    <artifactId>json-lib</artifactId>
	    <version>2.4</version>
	    <classifier>jdk15</classifier>
	</dependency>
    
    <!-- 文件操作 -->
    <dependency>
	    <groupId>commons-fileupload</groupId>
	    <artifactId>commons-fileupload</artifactId>
	    <version>1.3.1</version>
	</dependency>
	
	<dependency>
	    <groupId>commons-io</groupId>
	    <artifactId>commons-io</artifactId>
	    <version>2.4</version>
	</dependency>
	
	<dependency>
	    <groupId>commons-beanutils</groupId>
	    <artifactId>commons-beanutils</artifactId>
	    <version>1.9.2</version>
	</dependency>
	
	<dependency>
	    <groupId>commons-lang</groupId>
	    <artifactId>commons-lang</artifactId>
	    <version>2.5</version>
	</dependency>

	<dependency>
	    <groupId>commons-collections</groupId>
	    <artifactId>commons-collections</artifactId>
	    <version>3.1</version>
	</dependency>
	
	<!-- 生成二维码 -->
	<!-- <dependency>
	    <groupId>com.google.zxing</groupId>
	    <artifactId>core</artifactId>
	    <version>3.2.0</version>
	</dependency> -->
	
	<!-- excel读取 -->
	<dependency>
	    <groupId>org.apache.poi</groupId>
	    <artifactId>poi-ooxml</artifactId>
	    <version>3.15</version>
	</dependency>
		
	<!-- websocket长连接 -->
<!-- 	<dependency>
	    <groupId>javax.websocket</groupId>
	    <artifactId>javax.websocket-api</artifactId>
	    <version>1.1</version>
	</dependency> -->
	
	<dependency>
	    <groupId>org.springframework.boot</groupId>
	    <artifactId>spring-boot-starter-websocket</artifactId>
	    <version>1.4.3.RELEASE</version>
	</dependency>
	
	<!-- nc文件读取操作 -->
 	<!-- <dependency>
	    <groupId>edu.ucar</groupId>
	    <artifactId>netcdfAll</artifactId>
	    <version>4.6.5</version>
	</dependency>  -->

  </dependencies>
  
  <build>
  	<finalName>ampc</finalName>
    <resources>
		<resource>
			<directory>${basedir}/src/main/webapp</directory>
             
             <targetPath>META-INF/resources</targetPath> 
             <includes>
                 <include>**/**</include>
             </includes>
         </resource>
         <resource>
             <directory>${basedir}/src/main/resources</directory>
             <includes>
                 <include>**/**</include>
             </includes>
		</resource>
	</resources>
	
	<!-- maven插件 -->
	<plugins>
		<plugin>
			<groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-maven-plugin</artifactId>
            <version>1.2.2.RELEASE</version>
			<configuration>
		  		<fork>true</fork>
			</configuration>
        	<dependencies>
	            <dependency>
	                <groupId>org.springframework</groupId>
	                <artifactId>springloaded</artifactId>
	                <version>1.2.3.RELEASE</version>
	            </dependency>
        	</dependencies>
	  	</plugin>
	  	<plugin>  <!-- 验证码编译时报错：com.sun.image.codec.jpeg不存在，增加此插件配置 -->
		    <groupId>org.apache.maven.plugins</groupId>
		    <artifactId>maven-compiler-plugin</artifactId>
		    <version>3.5.1</version>  
		    <configuration>  
		        <source>${java.version}</source>  
		        <target>${java.version}</target>  
		        <encoding>${project.build.sourceEncoding}</encoding>  
		            <compilerArguments>  
		                  <verbose />  
		              <bootclasspath>${java.home}/lib/rt.jar;${java.home}/lib/jce.jar</bootclasspath>  
		        </compilerArguments>  
		    </configuration>  
		</plugin>
	</plugins>
	
  </build>
</project>